NATTQA-ENV/force-app/main/default/objects/Order/fields/Client_Final_Project__c.field-meta.xml
<CustomField>
    <fullName>Client_Final_Project__c</fullName>
    <label>Client/Final Project</label>
    <length>20</length>
    <type>Text</type>
</CustomField>