NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_ASO_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_ID__c</fullName>
    <label>ASO ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>