NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_ASO_Rev__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_ASO_Rev__c</fullName>
    <formula>SBQQ__Quote__r.CONTAINER_ASO_Rev__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ASO Rev</label>
    <type>Text</type>
</CustomField>