NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Contract_Price__c</fullName>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>