NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Cost_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Cost_Contract_Price__c</fullName>
    <label>Contract Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>