NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Count_invalid__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Count_invalid__c</fullName>
    <label>Count Invalid</label>
    <summaryFilterItems>
        <field>OrderItem.CONTAINER_Is_product_line_valid__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>