NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Freight_Terms__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Freight_Terms__c</fullName>
    <label>Frieght Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTAINER_Sales_Region__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CARRIAGE AND INSURANCE PAID TO -CIP</fullName>
            </value>
            <value>
                <fullName>CIP- CIP</fullName>
            </value>
            <value>
                <fullName>COLLECT - COL</fullName>
            </value>
            <value>
                <fullName>DELIVED AT PLACE - DAP</fullName>
            </value>
            <value>
                <fullName>DELIVED DUTY PAID - DDP</fullName>
            </value>
            <value>
                <fullName>DELIVERED AT PLACE - DAP</fullName>
            </value>
            <value>
                <fullName>DELIVERED AT TERMINAL - DAT</fullName>
            </value>
            <value>
                <fullName>DELIVERED DUTY PAID - DDP</fullName>
            </value>
            <value>
                <fullName>EX FACTORY – EXC</fullName>
            </value>
            <value>
                <fullName>EX-FACTORY - EXW</fullName>
            </value>
            <value>
                <fullName>FREIGHT COLLECT - C</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - N/A</fullName>
            </value>
            <value>
                <fullName>PREPAID &amp; ALLOWED - PPA</fullName>
            </value>
            <value>
                <fullName>PREPAID &amp; BILLED - PPB</fullName>
            </value>
            <value>
                <fullName>PREPAID - PPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>