NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Freight_Terms_GENSET__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Freight_Terms_GENSET__c</fullName>
    <label>Freight Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CARRIAGE PAID TO - CPT</fullName>
            </value>
            <value>
                <fullName>CIP - CIP</fullName>
            </value>
            <value>
                <fullName>COST AND FREIGHT - CFR</fullName>
            </value>
            <value>
                <fullName>DELIVERED AT PLACE - DAP</fullName>
            </value>
            <value>
                <fullName>DELIVERED DUTY PAID - DDP</fullName>
            </value>
            <value>
                <fullName>EX-FACTORY - EXW</fullName>
            </value>
            <value>
                <fullName>EX WORKS - EXW</fullName>
            </value>
            <value>
                <fullName>FREE CARRIER - FCA</fullName>
            </value>
            <value>
                <fullName>FREIGHT COLLECT - C</fullName>
            </value>
            <value>
                <fullName>FREIGHT PREPAID - PP</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE – N/A</fullName>
            </value>
            <value>
                <fullName>PREPAID &amp; ALLOWED - PPA</fullName>
            </value>
            <value>
                <fullName>PREPAID &amp; BILLED - PPB</fullName>
            </value>
            <value>
                <fullName>PREPAID - PPD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>