NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Integration_Error_Description__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Integration_Error_Description__c</fullName>
    <label>Integration Error Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>