NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Is_Product_Valid__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Is_Product_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Product Invalid</label>
    <type>Checkbox</type>
</CustomField>