NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_JDE_Order_ID__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_JDE_Order_ID__c</fullName>
    <label>JDE Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>