NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Job__c</fullName>
    <label>Job #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>