NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Legacy_Bill_To__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Legacy_Bill_To__c</fullName>
    <formula>Account.CONTAINER_AR_Code_JDE_AR_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legacy Bill To #</label>
    <type>Text</type>
</CustomField>