NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Net_total_Price__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Net_total_Price__c</fullName>
    <label>Total Net Unit Price</label>
    <summarizedField>OrderItem.CONTAINER_Net_Unit_Price__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>