NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Owner_LN_Baan_Code__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Owner_LN_Baan_Code__c</fullName>
    <formula>Owner:User.CONTAINER_LN_Sales_Rep_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner LN Baan Code</label>
    <type>Text</type>
</CustomField>