NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTAINER_Sales_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>NET 30 DAYS – N30</fullName>
            </value>
            <value>
                <fullName>NET 45 DAYS – N45</fullName>
            </value>
            <value>
                <fullName>NET 60 DAYS – N60</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - NAO</fullName>
            </value>
            <value>
                <fullName>NET 75 DAYS – N97</fullName>
            </value>
            <value>
                <fullName>NET 90 DAYS – N78</fullName>
            </value>
            <value>
                <fullName>102 DAYS PAYMENT TERM - 102</fullName>
            </value>
            <value>
                <fullName>CASH ON DELIVERY -COD</fullName>
            </value>
            <value>
                <fullName>LC 30 DAYS FROM BL D - L30</fullName>
            </value>
            <value>
                <fullName>LC 45 DAYS FROM BL D - L45</fullName>
            </value>
            <value>
                <fullName>LC AT SIGHT-- 21 DAY - L00</fullName>
            </value>
            <value>
                <fullName>50% CASH IN ADVANCE - CIA 50%</fullName>
            </value>
            <value>
                <fullName>0 DAYS CN RETURN PAY</fullName>
            </value>
            <value>
                <fullName>12 DAYS PAYMENT TERM - 12</fullName>
            </value>
            <value>
                <fullName>14 DAYS PAYMENT TERM - 14</fullName>
            </value>
            <value>
                <fullName>15 DAYS PAYMENT TERM - 15</fullName>
            </value>
            <value>
                <fullName>21 DAYS PAYMENT TERM - 21</fullName>
            </value>
            <value>
                <fullName>30 DAYS PAYMENT TERM - 30</fullName>
            </value>
            <value>
                <fullName>40 DAYS PAYMENT TERM - 40</fullName>
            </value>
            <value>
                <fullName>45 DAYS PAYMENT TERM - 45</fullName>
            </value>
            <value>
                <fullName>50 DAYS PAYMENT TERM - 50</fullName>
            </value>
            <value>
                <fullName>65 DAYS PAYMENT TERM - 65</fullName>
            </value>
            <value>
                <fullName>CASH IN ADVANCE - CIA</fullName>
            </value>
            <value>
                <fullName>CASH ON DELIVERY - COD</fullName>
            </value>
            <value>
                <fullName>LETTER OF CREDIT - LOC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>46 DAYS PAYMENT TERM - 46</fullName>
            </value>
            <value>
                <fullName>60 DAYS PAYMENT TERM - 60</fullName>
            </value>
            <value>
                <fullName>90 DAYS PAYMENT TERM - 90</fullName>
            </value>
            <value>
                <fullName>120 DAYS PAYMENT TERM -120</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>