NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Payment_Terms_GENSET__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Payment_Terms_GENSET__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CASH IN ADVANCE - CIA</fullName>
            </value>
            <value>
                <fullName>LETTER OF CREDIT - LOC</fullName>
            </value>
            <value>
                <fullName>NET 30 DAYS - N30</fullName>
            </value>
            <value>
                <fullName>NET 45 DAYS - N45</fullName>
            </value>
            <value>
                <fullName>NET 60 DAYS - N60</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE - NAO</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>CASH IN ADVANCE (CIA)</fullName>
                <isActive>false</isActive>
                <label>CASH IN ADVANCE (CIA)</label>
            </value>
            <value>
                <fullName>LETTER OF CREDIT (LOC)</fullName>
                <isActive>false</isActive>
                <label>LETTER OF CREDIT (LOC)</label>
            </value>
            <value>
                <fullName>NET 30 DAYS (N30)</fullName>
                <isActive>false</isActive>
                <label>NET 30 DAYS (N30)</label>
            </value>
            <value>
                <fullName>NET 30 DAYS – N30</fullName>
                <isActive>false</isActive>
                <label>NET 30 DAYS – N30</label>
            </value>
            <value>
                <fullName>NET 45 DAYS (N45)</fullName>
                <isActive>false</isActive>
                <label>NET 45 DAYS (N45)</label>
            </value>
            <value>
                <fullName>NET 45 DAYS – N45</fullName>
                <isActive>false</isActive>
                <label>NET 45 DAYS – N45</label>
            </value>
            <value>
                <fullName>NET 60 DAYS (N60)</fullName>
                <isActive>false</isActive>
                <label>NET 60 DAYS (N60)</label>
            </value>
            <value>
                <fullName>NET 60 DAYS – N60</fullName>
                <isActive>false</isActive>
                <label>NET 60 DAYS – N60</label>
            </value>
            <value>
                <fullName>NOT APPLICABLE (NAO)</fullName>
                <isActive>false</isActive>
                <label>NOT APPLICABLE (NAO)</label>
            </value>
            <value>
                <fullName>NOT APPLICABLE - NAO&quot;</fullName>
                <isActive>false</isActive>
                <label>NOT APPLICABLE - NAO&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>