NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_PO_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_PO_Number__c</fullName>
    <label>Customer PO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>