NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Sales_Region__c</fullName>
    <label>Sales Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>NAO</fullName>
            </value>
            <value>
                <fullName>SNAO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>