NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Sent_to_LNBaan__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Sent_to_LNBaan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to LN Baan</label>
    <type>Checkbox</type>
</CustomField>