NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Ship_Date__c</fullName>
    <label>Ship Date</label>
    <type>Date</type>
</CustomField>