NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_SO_Category__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_SO_Category__c</fullName>
    <label>SO Category NT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CONTAINER_Sales_Region__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>CONSIGNMENT (CN) - CN</fullName>
            </value>
            <value>
                <fullName>CONTAINER INTERNAL (CI) - CI</fullName>
            </value>
            <value>
                <fullName>INTERNAL “0” $ SALE(INT) – INT</fullName>
            </value>
            <value>
                <fullName>LEASING COMPANY (LC) - LC</fullName>
            </value>
            <value>
                <fullName>STEAMSSHIP COMPANY(SS) - SS</fullName>
            </value>
            <value>
                <fullName>CARRIER INTERNAL - CI</fullName>
            </value>
            <value>
                <fullName>INTERNAL ZERO DOLLAR - INT</fullName>
            </value>
            <value>
                <fullName>LEASING COMPANY - LC</fullName>
            </value>
            <value>
                <fullName>STEAMSSHIP COMPANY - SS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>