NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_SO_GENSET_Category__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_SO_GENSET_Category__c</fullName>
    <label>SO Category GENSET</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CONSIGNMENT (CN) - CN</fullName>
            </value>
            <value>
                <fullName>CONTAINER INTERNAL (CI) - CI</fullName>
            </value>
            <value>
                <fullName>INTERNAL “0” $ SALE(INT) – INT</fullName>
            </value>
            <value>
                <fullName>LEASING COMPANY (LC) - LC</fullName>
            </value>
            <value>
                <fullName>STEAMSSHIP COMPANY(SS) - SS</fullName>
            </value>
            <value>
                <fullName>STEAMSSHIP COMPANY(SS) - SS&quot;</fullName>
                <isActive>false</isActive>
                <label>STEAMSSHIP COMPANY(SS) - SS&quot;</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>