NATTQA-ENV/force-app/main/default/objects/Order/fields/CONTAINER_WON_Date__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_WON_Date__c</fullName>
    <label>Quote to Cust Date</label>
    <type>Date</type>
</CustomField>