NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Base_Price__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Base_Price__c</fullName>
    <description>CAP-11749 : SAP Calculates Base Price</description>
    <label>CTBR Base Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>