NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_BillToLocation__c.field-meta.xml
<CustomField>
    <fullName>CTBR_BillToLocation__c</fullName>
    <label>Bill To Location</label>
    <length>50</length>
    <type>Text</type>
</CustomField>