NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_BluEdge_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>CTBR_BluEdge_Shipment_Method__c</fullName>
    <description>twin field</description>
    <label>CTBR BluEdge Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CTBR_BluEdge_Shipment_Method</valueSetName>
    </valueSet>
</CustomField>