NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>