NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Freight_Payment__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Freight_Payment__c</fullName>
    <label>CTBR Freight Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIF</fullName>
                <default>true</default>
                <label>CIF</label>
            </value>
            <value>
                <fullName>FOB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>