NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_JDE_Billing_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>CTBR_JDE_Billing_Address_Id__c</fullName>
    <description>Pull JDE Address Id for Billing Address selected</description>
    <formula>CASESAFEID(NATT_Billing_Address__r.NATT_JDE_Address_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR JDE Billing Address Id</label>
    <type>Text</type>
</CustomField>