NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_JDE_Shipping_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>CTBR_JDE_Shipping_Address_Id__c</fullName>
    <description>pull JDE Address for Shipping Address selected</description>
    <formula>CASESAFEID(NATT_Shipping_Address__r.NATT_JDE_Address_ID__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CTBR JDE Shipping Address Id</label>
    <type>Text</type>
</CustomField>