NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_PricingLastUpdate__c.field-meta.xml
<CustomField>
    <fullName>CTBR_PricingLastUpdate__c</fullName>
    <description>Indicates the last time a pricing update from SAP was applied to this order</description>
    <label>Pricing Last Update</label>
    <type>DateTime</type>
</CustomField>