NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_PricingValidUntil__c.field-meta.xml
<CustomField>
    <fullName>CTBR_PricingValidUntil__c</fullName>
    <formula>CTBR_PricingLastUpdate__c+2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Valid Until</label>
    <type>DateTime</type>
</CustomField>