NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_Sales_Order_Draft_Number__c.field-meta.xml
<CustomField>
    <fullName>CTBR_Sales_Order_Draft_Number__c</fullName>
    <description>Sales Order Draft Number(If in approval workflow)</description>
    <label>Sales Order Draft Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>