NATTQA-ENV/force-app/main/default/objects/Order/fields/CTBR_SapQuoteId__c.field-meta.xml
<CustomField>
    <fullName>CTBR_SapQuoteId__c</fullName>
    <externalId>true</externalId>
    <label>SAP Quote Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>